force-app/main/default/objects/Competitor__c/fields/Earnings_Before_Interest_and_Taxes_EBIT__c.field-meta.xml
<CustomField>
    <fullName>Earnings_Before_Interest_and_Taxes_EBIT__c</fullName>
    <label>Earnings Before Interest and Taxes (EBIT</label>
    <type>TextArea</type>
</CustomField>