force-app/main/default/objects/Competitor__c/fields/EBITDA__c.field-meta.xml
<CustomField>
    <fullName>EBITDA__c</fullName>
    <description>Earnings Before Interest, Tax, Depreciation &amp; Amortization (EBITDA)</description>
    <label>EBITDA</label>
    <type>TextArea</type>
</CustomField>