force-app/main/default/objects/Competitor__c/fields/Net_Income__c.field-meta.xml
<CustomField>
    <fullName>Net_Income__c</fullName>
    <label>Net Income</label>
    <type>TextArea</type>
</CustomField>