force-app/main/default/objects/Competitor__c/fields/New_Client__c.field-meta.xml
<CustomField>
    <fullName>New_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Client</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Competitors</relationshipLabel>
    <relationshipName>Competitors</relationshipName>
    <type>Lookup</type>
</CustomField>