force-app/main/default/objects/Competitor__c/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <label>Revenue</label>
    <type>TextArea</type>
</CustomField>