force-app/main/default/objects/Competitor__c/fields/Total_Assets__c.field-meta.xml
<CustomField>
    <fullName>Total_Assets__c</fullName>
    <label>Total Assets</label>
    <type>TextArea</type>
</CustomField>