force-app/main/default/objects/Competitor__c/fields/Total_Current_Assets__c.field-meta.xml
<CustomField>
    <fullName>Total_Current_Assets__c</fullName>
    <label>Total Current Assets</label>
    <type>TextArea</type>
</CustomField>