force-app/main/default/objects/Competitor__c/fields/Total_Current_Liabilities__c.field-meta.xml
<CustomField>
    <fullName>Total_Current_Liabilities__c</fullName>
    <label>Total Current Liabilities</label>
    <type>TextArea</type>
</CustomField>