force-app/main/default/objects/Competitor__c/fields/Total_Diluted_Earning_Loss_per_Share__c.field-meta.xml
<CustomField>
    <fullName>Total_Diluted_Earning_Loss_per_Share__c</fullName>
    <label>Total Diluted Earning/Loss per Share</label>
    <type>TextArea</type>
</CustomField>