force-app/main/default/objects/Competitor__c/fields/Total_Equity__c.field-meta.xml
<CustomField>
    <fullName>Total_Equity__c</fullName>
    <label>Total Equity</label>
    <type>TextArea</type>
</CustomField>