force-app/main/default/objects/Competitor__c/fields/Total_Liabilities__c.field-meta.xml
<CustomField>
    <fullName>Total_Liabilities__c</fullName>
    <label>Total Liabilities</label>
    <type>TextArea</type>
</CustomField>