force-app/main/default/objects/Competitor__c/fields/Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue__c</fullName>
    <label>Total Revenue</label>
    <type>TextArea</type>
</CustomField>